# dmplayer

./: .gitignore  CMakeLists.txt  FeatureRequests.md  MPMPDfeaturelist.md  ProjectHome.md
cmake/: FindFMod.cmake  FindLibAO.cmake  FindLibDUMB.cmake  FindLibFaad2.cmake  FindLibFlac.cmake  FindLibOGG.cmake  FindLibSamplerate.cmake  FindLibSidplay.cmake  FindLibVorbis.cmake  FindMad.cmake  FindMyBoost.cmake  FindPkgConfig.cmake  FindPortAudio.cmake
docs/: installing with mingw (win32).txt  protocol-msc.txt
src/: CMakeLists.txt  cross-platform.h  encapsulate.c  error-handling.cpp  error-handling.h  middle_end.cpp  middle_end.h  mpmpd.cpp  network-core.cpp  network-core.h  network-handler.cpp  network-handler.h  packet.cpp  packet.h  playlist_management.cpp  playlist_management.h  synced_playlist.h  threads.cpp  threads.h
src/audio/: CMakeLists.txt  audio_controller.cpp  audio_controller.h  audiosource_interface.h  backend_interface.h  backend_libao.cpp  backend_libao.h  backend_portaudio.cpp  backend_portaudio.h  backend_sdlmixer.cpp  backend_sdlmixer.h  backend_wavwriter.cpp  datasource_filereader.cpp  datasource_filereader.h  datasource_httpstream.cpp  datasource_httpstream.h  datasource_interface.h  datasource_oggstream.cpp  datasource_oggstream.h  datasource_resetbuffer.h  decoder_aac.cpp  decoder_aac.h  decoder_flac.cpp  decoder_flac.h  decoder_interface.cpp  decoder_interface.h  decoder_libogg.cpp  decoder_libogg.h  decoder_mad.cpp  decoder_mad.h  decoder_mencoder.cpp  decoder_mencoder.h  decoder_ogg.cpp  decoder_ogg.h  decoder_oggvorbisfile.cpp  decoder_oggvorbisfile.h  decoder_playlist.cpp  decoder_playlist.h  decoder_plugin.cpp  decoder_plugin.h  (+28 more)
src/audio/mp3/: mp3_interface.cpp  mp3_interface.h  mp3_structure.h
src/audio/zlib/: CMakeLists.txt
src/gtk-client/: CMakeLists.txt  gladegen.sh  gmpmpc.cpp  gmpmpc.h  gmpmpc_connection_handling.cpp  gmpmpc_connection_handling.h  gmpmpc_icon.rc  gmpmpc_main_window.glade  gmpmpc_playlist.cpp  gmpmpc_playlist.h  gmpmpc_select_server.cpp  gmpmpc_select_server.h  gmpmpc_select_server_window.glade  gmpmpc_trackdb.cpp  gmpmpc_trackdb.h  track_treeview.cpp  track_treeview.h
src/libexecstream/: exec-stream.h
src/libexecstream/win/: exec-stream-helpers.cxx  exec-stream-impl.cxx
src/network/: CMakeLists.txt  cross-platform.h  network-core.cpp  network-core.h
src/qt-client/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  QToggleHeaderAction.cpp  QToggleHeaderAction.h  QtBooster.h  QtSlotBoost.cpp  QtSlotBoost.h
src/util/: CMakeLists.txt  DynLoadLibrary.cpp  DynLoadLibrary.h  UPXFix.h  thread_group2.cpp  thread_group2.h
trunk/: CMakeLists.txt
trunk/cmake/: FindFMod.cmake  FindLibAO.cmake  FindLibDUMB.cmake  FindLibFlac.cmake  FindLibMad.cmake  FindLibOGG.cmake  FindLibSamplerate.cmake  FindLibSidplay2.cmake  FindLibVorbis.cmake  FindMad.cmake  FindMyBoost.cmake  FindPkgConfig.cmake  FindPortAudio.cmake  FindSearchUtils.cmake
trunk/docs/: codingstandard.txt  installing with mingw (win32).txt
trunk/src/: CMakeLists.txt  cross-platform.h  error-handling.cpp  error-handling.h  middle_end.cpp  middle_end.h  mpmpd.cpp  mpmpd.h  network-core.cpp  network-core.h  network-crossplatform.h  network-handler.cpp  network-handler.h  packet.cpp  packet.h  playlist_management.cpp  playlist_management.h  synced_playlist.h  types.h
trunk/src/audio/: CMakeLists.txt  audio_controller.cpp  audio_controller.h  audiosource_interface.h  backend_interface.h  backend_libao.cpp  backend_libao.h  backend_portaudio.cpp  backend_portaudio.h  backend_sdlmixer.cpp  backend_wavwriter.cpp  backend_wavwriter.h  datasource_filereader.cpp  datasource_filereader.h  datasource_httpstream.cpp  datasource_httpstream.h  datasource_interface.h  datasource_oggstream.cpp  datasource_oggstream.h  datasource_resetbuffer.cpp  datasource_resetbuffer.h  decoder_aac.cpp  decoder_aac.h  decoder_dumb.cpp  decoder_dumb.h  decoder_flac.cpp  decoder_flac.h  decoder_interface.cpp  decoder_interface.h  decoder_libogg.h  decoder_mad.cpp  decoder_mad.h  decoder_mencoder.cpp  decoder_mencoder.h  decoder_ogg.cpp  decoder_ogg.h  decoder_oggvorbisfile.cpp  decoder_oggvorbisfile.h  decoder_playlist.cpp  decoder_playlist.h  (+33 more)
trunk/src/audio/mp3/: mp3_interface.cpp  mp3_interface.h
trunk/src/audio/zlib/: zutil.h
trunk/src/gtk-client/: CMakeLists.txt  dispatcher_marshaller.h  gmpmpc.cpp  gmpmpc.h  gmpmpc_connection_handling.cpp  gmpmpc_connection_handling.h  gmpmpc_icon.h  gmpmpc_main_window.glade  gmpmpc_playlist.cpp  gmpmpc_playlist.h  gmpmpc_select_server.cpp  gmpmpc_select_server.h  gmpmpc_select_server_window.glade  gmpmpc_trackdb.cpp  gmpmpc_trackdb.h  track_treeview.cpp  track_treeview.h
trunk/src/libexecstream/: exec-stream.cpp
trunk/src/libexecstream/posix/: exec-stream-impl.cxx
trunk/src/network/: cross-platform.h  network-core.cpp  network-core.h
trunk/src/qt-client/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  QPlaylist.cpp  QPlaylist.h  QtBooster.h  icons.qrc
trunk/src/util/: CMakeLists.txt  DynLoadLibrary.cpp  DynLoadLibrary.h  thread_group2.cpp  thread_group2.h
wiki/: FeatureRequests.wiki  MPMPDfeaturelist.wiki
