find_package(SDL)
find_package(SDL_mixer)
find_package(PortAudio)
find_package(Mad)
find_package(LibAO)


IF(PORTAUDIO_FOUND)
	SET(BACKEND_FILES_PORTAUDIO
		backend_portaudio.h
		backend_portaudio.cpp
	)
	SET(BACKEND_LIBRARIES_PORTAUDIO ${PORTAUDIO_LIBRARY})
	INCLUDE_DIRECTORIES(${PORTAUDIO_INCLUDE_DIR})
	ADD_DEFINITIONS(-DPORTAUDIO_BACKEND)
ENDIF(PORTAUDIO_FOUND)

IF(SDLMIXER_FOUND)
	SET(BACKEND_FILES_SDLMIXER
		backend_sdlmixer.h
		backend_sdlmixer.cpp
	)
	SET(BACKEND_LIBRARIES_SDL ${SDLMIXER_LIBRARY})
	INCLUDE_DIRECTORIES(
		${SDL_INCLUDE_DIR}
		${SDLMIXER_INCLUDE_DIR}
	)
	ADD_DEFINITIONS(-DSDL_MIXER_BACKEND)
ENDIF(SDLMIXER_FOUND)

IF(MAD_FOUND)
  SET(DECODER_FILES_MAD
    decoder_mad.h
    decoder_mad.cpp
  )
  SET(DECODER_LIBRARIES_MAD ${MAD_LIBRARY})
  INCLUDE_DIRECTORIES(${MAD_INCLUDE_DIR})
  ADD_DEFINITIONS(-DMAD_DECODER)
ENDIF(MAD_FOUND)

IF(LIBAO_FOUND)
	SET(BACKEND_FILES_LIBAO
		backend_libao.h
		backend_libao.cpp
	)
	SET(BACKEND_LIBRARIES_LIBAO ${LIBAO_LIBRARY})
	INCLUDE_DIRECTORIES(
		${LIBAO_INCLUDE_DIR}
	)
	ADD_DEFINITIONS(-DLIBAO_BACKEND)
ENDIF(LIBAO_FOUND)

ADD_LIBRARY(mpmp_audio
	backend_interface.h
	datasource_interface.h
	decoder_interface.h
	audio_controller.h
	audio_controller.cpp
	datasource_filereader.h
	datasource_filereader.cpp
	${BACKEND_FILES_PORTAUDIO}
	${BACKEND_FILES_SDLMIXER}
	${DECODER_FILES_MAD}
	${BACKEND_FILES_LIBAO}
)

SET_TARGET_PROPERTIES(mpmp_audio PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES(mpmp_audio
	${BACKEND_LIBRARIES_SDL}
	${BACKEND_LIBRARIES_PORTAUDIO}
	${BACKEND_LIBRARIES_LIBAO}
)
